--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,8 @@ body {
 }
     .site-header .wrapper {
         position: relative;
+        min-height: 290px;
+        box-sizing: border-box;
     }
         .site-header section {
             display: inline-block;
@@ -185,6 +187,35 @@ body {
             transform: rotate(45deg);
             background-color: #2c3e50;
         }
+        .site-header .toggle-target {
+            max-height: 250px;
+        }
+        #timeline .toggle-target {
+            max-height: 140px;
+        }
+        .toggler,
+        .data-toggler {
+            cursor: pointer;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            -o-user-select: none;
+            user-select: none;
+        }
+        .toggle-target {
+            opacity: 1;
+            transition: max-height .25s cubic-bezier(.55, 0, .1, 1), opacity .25s linear, margin .25s linear;
+            margin: 0;
+        }
+        .site-header .toggle-target.slide,
+        #timeline .toggle-target.slide,
+        .toggle-target.slide {
+            max-height: 0;
+            opacity: 0;
+            transition: max-height .25s cubic-bezier(.55, 0, .1, 1), opacity .25s linear, margin .25s linear;
+            overflow: hidden;
+            margin: 0;
+        }
 /*
  * Starts Main content
  */
@@ -213,21 +244,23 @@ body {
     overflow: hidden;
     list-style: none;
     position: relative;
+    padding-bottom: 60px;
 }
 #timeline:after { /* The grey dot in the bottom */
     position: absolute;
-    bottom: 0%;
+    bottom: 0;
     left: 50%;
-    margin-left: -10px;
+    margin-left: -12px;
     content: " ";
     display: block;
     background: #969fa8;
-    width: 21px;
-    height: 21px;
+    width: 25px;
+    height: 25px;
     border-radius: 50%;
 }
     #timeline li {
-        margin-bottom: 50px;
+        margin-bottom: 60px;
+        min-height: 50px;
         position: relative;
     }
         #timeline time {
@@ -240,7 +273,9 @@ body {
             font-size: 1.5em;
             display: inline-block;
             position: absolute;
-            left: 44.5%;
+            left: 50%;
+            margin-left: -50px;
+            z-index: 2;
         }
         #timeline section {
             display: inline-block;
@@ -263,7 +298,7 @@ body {
                 line-height: 1.75em;
                 display: inline-block;
                 position: relative;
-                z-index: 0;
+                z-index: 1;
             }
             #timeline .column-narrow-right h2 {
                 width: 230px;
@@ -308,6 +343,9 @@ body {
                 #timeline .column-narrow-right .branch-lines {
                     right: 95%;
                 }
+                #timeline .toggle-target.slide .branch-lines {
+                    display: none;
+                }
                 #timeline .secondary-nodes .branch-lines {
                     clear: right; /* Clears floating for secondary nodes in a li */
                     border-right: 107px solid #00a3e6;
@@ -323,6 +361,7 @@ body {
                     border-right: 2px solid #00a3e6;
                 }
                 #timeline .column-narrow-left.secondary-nodes:after {
+                    z-index: 0;
                     left: 40.2%;
                 }
                 #timeline .column-narrow-right.secondary-nodes:after {
@@ -453,8 +492,243 @@ body {
    Media Queries
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
+@media screen and (max-width: 320px) {
+    .site-header #profile-image {
+        width: 100%;
+        padding: 25px 75px;
+        box-sizing: border-box;
+    }
+    .site-header .right-floated-container,
+    .site-header #profile-info,
+    .site-header .column-narrow-left {
+        float: none;
+        width: 100%;
+        margin: 0;
+        display: block;
+    }
+}
 
+@media screen and (max-width: 991px) {
+    .wrapper {
+        width: 100%;
+        padding: 0 20px;
+        box-sizing: border-box;
+    }
+    .site-header #up-arrow {
+        display: none;
+    }
+    .site-header #profile-image {
+        width: 100%;
+        box-sizing: border-box;
+        padding: 50px 0 10px;
+        text-align: center;
+    }
+    .site-header #profile-image img {
+        width: 150px;
+    }
+    .site-header .right-floated-container {
+        float: none;
+        width: 100%;
+    }
+    .site-header .column-narrow-left {
+        float: right;
+        margin-left: 0;
+    }
+    #main-content .wrapper {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    #timeline .column-narrow-left.secondary-nodes .branch-lines {
+        display: none;
+    }
+    #timeline .column-narrow-left.secondary-nodes:after {
+        left: 28px;
+    }
+    #timeline .branch-lines {
+        border-right-width: 130px;
+    }
+    #skills div {
+        display: inline-block;
+    }
+    #skills li span[data-percentage="100"]:before,
+    #skills li span[data-percentage="85"]:before,
+    #skills li span[data-percentage="85"]:after,
+    #skills li span[data-percentage="75"]:before,
+    #skills li span[data-percentage="50"]:before {
+        width: 100px;
+        height: 100px;
+    }
+    #skills li span[data-percentage]+span {
+        font-size: 1.5em;
+        left: 50%;
+        margin-left: -20px;
+    }
+    #skills li span[data-percentage="100"]+span {
+        margin-left: -28px;
+    }
+
+    #timeline {
+        background-position: 90% 0;
+        padding-left: 0;
+        padding-right: 0;
+    }
+    #timeline:after {
+        left: 90%;
+        margin-left: -14px;
+    }
+    #timeline .column-narrow-right,
+    #timeline .column-narrow-left {
+        float: none;
+        clear: both;
+        width: auto;
+        display: block;
+        max-width: 270px;
+        margin: 0 0 30px 0;
+    }
+    #timeline .column-narrow-right:last-child,
+    #timeline .column-narrow-left:last-child {
+        margin-bottom: 0;
+    }
+    #timeline time {
+        left: auto;
+        right: 10%;
+        top: 0;
+        margin-left: 0;
+        margin-right: -48px;
+    }
+    #timeline .column-narrow-left.secondary-nodes:after,
+    #timeline .branch-lines {
+        display: none;
+    }
+    #main-content .categories {
+        text-align: center;
+        padding: 0;
+        margin-bottom: 20px;
+    }
+    #main-content .categories span.right-floated-container {
+        float: none;
+    }
+    #main-content .categories:first-child span:first-child:after {
+        content: "&";
+        margin: 0 8px;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    #timeline .branch-lines {
+        border-right-width: 45px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .site-header #profile-info,
+    .site-header .column-narrow-left {
+        float: none;
+        width: auto;
+        margin: 0 auto;
+        max-width: 250px;
+        display: block;
+    }
+    #skills li span[data-percentage]:before,
+    #skills li span[data-percentage]:after {
+        width: 75px;
+        height: 75px;
+        border-width: 10px;
+    }
+    #skills li p {
+        font-size: 1em;
+        margin: 7px 0;
+    }
+    #skills li span[data-percentage]+span {
+        font-size: 1.25em;
+        top: 50%;
+        margin-top: -10px;
+        margin-left: -17px;
+    }
+    #skills li span[data-percentage="100"]+span {
+        margin-left: -24px;
+    }
+    .site-footer .categories div {
+        width: 45%;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    #skills li {
+        width: 50%;
+        min-height: 250px;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    #skills li span[data-percentage]:before,
+    #skills li span[data-percentage]:after {
+        width: 125px;
+        height: 125px;
+        border-width: 15px;
+    }
+    #skills li p {
+        padding-left: 0;
+    }
+    #timeline time {
+        font-size: 1.2em;
+        line-height: 3.95;
+        width: 75px;
+        margin-right: -35px;
+    }
+}
+@media screen and (max-width: 480px) {
+    #skills li {
+        width: 100%;
+        min-height: 0;
+        text-align: center;
+    }
+    #skills li span[data-percentage]:before,
+    #skills li span[data-percentage]:after {
+        width: 125px;
+        height: 125px;
+        border-width: 15px;
+    }
+    #skills li p {
+        padding-left: 0;
+    }
+    #timeline .column-narrow-right,
+    #timeline .column-narrow-left {
+        width: 250px;
+    }
+    #timeline .column-narrow-right h2,
+    #timeline .column-narrow-left h2 {
+        width: 210px;
+    }
+    #timeline .column-narrow-left h2 {
+        padding-left: 40px;
+    }
+    #timeline .column-narrow-left h2 .triangle {
+        right: auto;
+        left: 0;
+        border-right: 25px solid transparent;
+        border-left: none;
+    }
+    #timeline li {
+        padding-top: 10px;
+    }
+    #timeline time {
+        font-size: 1.2em;
+        line-height: 3.125;
+        width: 60px;
+        margin-right: -30px;
+    }
+    #timeline section h2 {
+        font-size: 1.3em;
+    }
+    #timeline .toggle-target {
+        max-height: 180px;
+    }
+    .site-footer .categories div {
+        width: 100%;
+    }
+    .site-footer .categories div:first-child {
+        margin-bottom: 20px;
+    }
 }
 
 @media print,
@@ -520,10 +794,6 @@ body {
 
 .clearfix:after {
     clear: both;
-}
-
-.clearfix {
-    *zoom: 1;
 }
 
 /* ==========================================================================
